src/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> stmtlist
Rule 1     stmtlist -> <empty>
Rule 2     stmtlist -> statement
Rule 3     stmtlist -> statement SEMICOLON stmtlist
Rule 4     statement -> QUIT
Rule 5     statement -> BEGIN LPAREN namelist RPAREN
Rule 6     statement -> BEGIN_READONLY LPAREN namelist RPAREN
Rule 7     statement -> END LPAREN exprlist RPAREN
Rule 8     statement -> FAIL LPAREN exprlist RPAREN
Rule 9     statement -> RECOVER LPAREN exprlist RPAREN
Rule 10    statement -> READ LPAREN expression COMMA expression RPAREN
Rule 11    statement -> WRITE LPAREN expression COMMA expression COMMA expression RPAREN
Rule 12    statement -> DUMP LPAREN RPAREN
Rule 13    statement -> DUMP LPAREN expression RPAREN
Rule 14    statement -> NAME EQUALS expression
Rule 15    statement -> expression
Rule 16    namelist -> NAME
Rule 17    namelist -> NAME COMMA namelist
Rule 18    exprlist -> expression
Rule 19    exprlist -> expression COMMA exprlist
Rule 20    expression -> expression PLUS expression
Rule 21    expression -> expression MINUS expression
Rule 22    expression -> expression TIMES expression
Rule 23    expression -> expression DIVIDE expression
Rule 24    expression -> MINUS expression
Rule 25    expression -> LPAREN expression RPAREN
Rule 26    expression -> NUMBER
Rule 27    expression -> NAME

Terminals, with rules where they appear

BEGIN                : 5
BEGIN_READONLY       : 6
COMMA                : 10 11 11 17 19
DIVIDE               : 23
DUMP                 : 12 13
END                  : 7
EQUALS               : 14
FAIL                 : 8
LPAREN               : 5 6 7 8 9 10 11 12 13 25
MINUS                : 21 24
NAME                 : 14 16 17 27
NUMBER               : 26
PLUS                 : 20
QUIT                 : 4
READ                 : 10
RECOVER              : 9
RPAREN               : 5 6 7 8 9 10 11 12 13 25
SEMICOLON            : 3
TIMES                : 22
WRITE                : 11
error                : 

Nonterminals, with rules where they appear

expression           : 10 10 11 11 11 13 14 15 18 19 20 20 21 21 22 22 23 23 24 25
exprlist             : 7 8 9 19
namelist             : 5 6 17
statement            : 2 3
stmtlist             : 3 0

Parsing method: LALR

state 0

    (0) S' -> . stmtlist
    (1) stmtlist -> .
    (2) stmtlist -> . statement
    (3) stmtlist -> . statement SEMICOLON stmtlist
    (4) statement -> . QUIT
    (5) statement -> . BEGIN LPAREN namelist RPAREN
    (6) statement -> . BEGIN_READONLY LPAREN namelist RPAREN
    (7) statement -> . END LPAREN exprlist RPAREN
    (8) statement -> . FAIL LPAREN exprlist RPAREN
    (9) statement -> . RECOVER LPAREN exprlist RPAREN
    (10) statement -> . READ LPAREN expression COMMA expression RPAREN
    (11) statement -> . WRITE LPAREN expression COMMA expression COMMA expression RPAREN
    (12) statement -> . DUMP LPAREN RPAREN
    (13) statement -> . DUMP LPAREN expression RPAREN
    (14) statement -> . NAME EQUALS expression
    (15) statement -> . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . MINUS expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . NAME

    $end            reduce using rule 1 (stmtlist -> .)
    QUIT            shift and go to state 13
    BEGIN           shift and go to state 7
    BEGIN_READONLY  shift and go to state 4
    END             shift and go to state 9
    FAIL            shift and go to state 12
    RECOVER         shift and go to state 15
    READ            shift and go to state 2
    WRITE           shift and go to state 10
    DUMP            shift and go to state 1
    NAME            shift and go to state 14
    MINUS           shift and go to state 6
    LPAREN          shift and go to state 11
    NUMBER          shift and go to state 3

    expression                     shift and go to state 16
    statement                      shift and go to state 8
    stmtlist                       shift and go to state 5

state 1

    (12) statement -> DUMP . LPAREN RPAREN
    (13) statement -> DUMP . LPAREN expression RPAREN

    LPAREN          shift and go to state 17


state 2

    (10) statement -> READ . LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 18


state 3

    (26) expression -> NUMBER .

    PLUS            reduce using rule 26 (expression -> NUMBER .)
    MINUS           reduce using rule 26 (expression -> NUMBER .)
    TIMES           reduce using rule 26 (expression -> NUMBER .)
    DIVIDE          reduce using rule 26 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 26 (expression -> NUMBER .)
    $end            reduce using rule 26 (expression -> NUMBER .)
    RPAREN          reduce using rule 26 (expression -> NUMBER .)
    COMMA           reduce using rule 26 (expression -> NUMBER .)


state 4

    (6) statement -> BEGIN_READONLY . LPAREN namelist RPAREN

    LPAREN          shift and go to state 19


state 5

    (0) S' -> stmtlist .



state 6

    (24) expression -> MINUS . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . MINUS expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . NAME

    MINUS           shift and go to state 6
    LPAREN          shift and go to state 11
    NUMBER          shift and go to state 3
    NAME            shift and go to state 21

    expression                     shift and go to state 20

state 7

    (5) statement -> BEGIN . LPAREN namelist RPAREN

    LPAREN          shift and go to state 22


state 8

    (2) stmtlist -> statement .
    (3) stmtlist -> statement . SEMICOLON stmtlist

    $end            reduce using rule 2 (stmtlist -> statement .)
    SEMICOLON       shift and go to state 23


state 9

    (7) statement -> END . LPAREN exprlist RPAREN

    LPAREN          shift and go to state 24


state 10

    (11) statement -> WRITE . LPAREN expression COMMA expression COMMA expression RPAREN

    LPAREN          shift and go to state 25


state 11

    (25) expression -> LPAREN . expression RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . MINUS expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . NAME

    MINUS           shift and go to state 6
    LPAREN          shift and go to state 11
    NUMBER          shift and go to state 3
    NAME            shift and go to state 21

    expression                     shift and go to state 26

state 12

    (8) statement -> FAIL . LPAREN exprlist RPAREN

    LPAREN          shift and go to state 27


state 13

    (4) statement -> QUIT .

    SEMICOLON       reduce using rule 4 (statement -> QUIT .)
    $end            reduce using rule 4 (statement -> QUIT .)


state 14

    (14) statement -> NAME . EQUALS expression
    (27) expression -> NAME .

    EQUALS          shift and go to state 28
    PLUS            reduce using rule 27 (expression -> NAME .)
    MINUS           reduce using rule 27 (expression -> NAME .)
    TIMES           reduce using rule 27 (expression -> NAME .)
    DIVIDE          reduce using rule 27 (expression -> NAME .)
    SEMICOLON       reduce using rule 27 (expression -> NAME .)
    $end            reduce using rule 27 (expression -> NAME .)


state 15

    (9) statement -> RECOVER . LPAREN exprlist RPAREN

    LPAREN          shift and go to state 29


state 16

    (15) statement -> expression .
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression

    SEMICOLON       reduce using rule 15 (statement -> expression .)
    $end            reduce using rule 15 (statement -> expression .)
    PLUS            shift and go to state 30
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 31


state 17

    (12) statement -> DUMP LPAREN . RPAREN
    (13) statement -> DUMP LPAREN . expression RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . MINUS expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . NAME

    RPAREN          shift and go to state 34
    MINUS           shift and go to state 6
    LPAREN          shift and go to state 11
    NUMBER          shift and go to state 3
    NAME            shift and go to state 21

    expression                     shift and go to state 35

state 18

    (10) statement -> READ LPAREN . expression COMMA expression RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . MINUS expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . NAME

    MINUS           shift and go to state 6
    LPAREN          shift and go to state 11
    NUMBER          shift and go to state 3
    NAME            shift and go to state 21

    expression                     shift and go to state 36

state 19

    (6) statement -> BEGIN_READONLY LPAREN . namelist RPAREN
    (16) namelist -> . NAME
    (17) namelist -> . NAME COMMA namelist

    NAME            shift and go to state 38

    namelist                       shift and go to state 37

state 20

    (24) expression -> MINUS expression .
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression

    PLUS            reduce using rule 24 (expression -> MINUS expression .)
    MINUS           reduce using rule 24 (expression -> MINUS expression .)
    TIMES           reduce using rule 24 (expression -> MINUS expression .)
    DIVIDE          reduce using rule 24 (expression -> MINUS expression .)
    SEMICOLON       reduce using rule 24 (expression -> MINUS expression .)
    $end            reduce using rule 24 (expression -> MINUS expression .)
    RPAREN          reduce using rule 24 (expression -> MINUS expression .)
    COMMA           reduce using rule 24 (expression -> MINUS expression .)

  ! PLUS            [ shift and go to state 30 ]
  ! MINUS           [ shift and go to state 32 ]
  ! TIMES           [ shift and go to state 33 ]
  ! DIVIDE          [ shift and go to state 31 ]


state 21

    (27) expression -> NAME .

    PLUS            reduce using rule 27 (expression -> NAME .)
    MINUS           reduce using rule 27 (expression -> NAME .)
    TIMES           reduce using rule 27 (expression -> NAME .)
    DIVIDE          reduce using rule 27 (expression -> NAME .)
    SEMICOLON       reduce using rule 27 (expression -> NAME .)
    $end            reduce using rule 27 (expression -> NAME .)
    RPAREN          reduce using rule 27 (expression -> NAME .)
    COMMA           reduce using rule 27 (expression -> NAME .)


state 22

    (5) statement -> BEGIN LPAREN . namelist RPAREN
    (16) namelist -> . NAME
    (17) namelist -> . NAME COMMA namelist

    NAME            shift and go to state 38

    namelist                       shift and go to state 39

state 23

    (3) stmtlist -> statement SEMICOLON . stmtlist
    (1) stmtlist -> .
    (2) stmtlist -> . statement
    (3) stmtlist -> . statement SEMICOLON stmtlist
    (4) statement -> . QUIT
    (5) statement -> . BEGIN LPAREN namelist RPAREN
    (6) statement -> . BEGIN_READONLY LPAREN namelist RPAREN
    (7) statement -> . END LPAREN exprlist RPAREN
    (8) statement -> . FAIL LPAREN exprlist RPAREN
    (9) statement -> . RECOVER LPAREN exprlist RPAREN
    (10) statement -> . READ LPAREN expression COMMA expression RPAREN
    (11) statement -> . WRITE LPAREN expression COMMA expression COMMA expression RPAREN
    (12) statement -> . DUMP LPAREN RPAREN
    (13) statement -> . DUMP LPAREN expression RPAREN
    (14) statement -> . NAME EQUALS expression
    (15) statement -> . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . MINUS expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . NAME

    $end            reduce using rule 1 (stmtlist -> .)
    QUIT            shift and go to state 13
    BEGIN           shift and go to state 7
    BEGIN_READONLY  shift and go to state 4
    END             shift and go to state 9
    FAIL            shift and go to state 12
    RECOVER         shift and go to state 15
    READ            shift and go to state 2
    WRITE           shift and go to state 10
    DUMP            shift and go to state 1
    NAME            shift and go to state 14
    MINUS           shift and go to state 6
    LPAREN          shift and go to state 11
    NUMBER          shift and go to state 3

    expression                     shift and go to state 16
    stmtlist                       shift and go to state 40
    statement                      shift and go to state 8

state 24

    (7) statement -> END LPAREN . exprlist RPAREN
    (18) exprlist -> . expression
    (19) exprlist -> . expression COMMA exprlist
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . MINUS expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . NAME

    MINUS           shift and go to state 6
    LPAREN          shift and go to state 11
    NUMBER          shift and go to state 3
    NAME            shift and go to state 21

    expression                     shift and go to state 41
    exprlist                       shift and go to state 42

state 25

    (11) statement -> WRITE LPAREN . expression COMMA expression COMMA expression RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . MINUS expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . NAME

    MINUS           shift and go to state 6
    LPAREN          shift and go to state 11
    NUMBER          shift and go to state 3
    NAME            shift and go to state 21

    expression                     shift and go to state 43

state 26

    (25) expression -> LPAREN expression . RPAREN
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 44
    PLUS            shift and go to state 30
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 31


state 27

    (8) statement -> FAIL LPAREN . exprlist RPAREN
    (18) exprlist -> . expression
    (19) exprlist -> . expression COMMA exprlist
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . MINUS expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . NAME

    MINUS           shift and go to state 6
    LPAREN          shift and go to state 11
    NUMBER          shift and go to state 3
    NAME            shift and go to state 21

    expression                     shift and go to state 41
    exprlist                       shift and go to state 45

state 28

    (14) statement -> NAME EQUALS . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . MINUS expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . NAME

    MINUS           shift and go to state 6
    LPAREN          shift and go to state 11
    NUMBER          shift and go to state 3
    NAME            shift and go to state 21

    expression                     shift and go to state 46

state 29

    (9) statement -> RECOVER LPAREN . exprlist RPAREN
    (18) exprlist -> . expression
    (19) exprlist -> . expression COMMA exprlist
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . MINUS expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . NAME

    MINUS           shift and go to state 6
    LPAREN          shift and go to state 11
    NUMBER          shift and go to state 3
    NAME            shift and go to state 21

    expression                     shift and go to state 41
    exprlist                       shift and go to state 47

state 30

    (20) expression -> expression PLUS . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . MINUS expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . NAME

    MINUS           shift and go to state 6
    LPAREN          shift and go to state 11
    NUMBER          shift and go to state 3
    NAME            shift and go to state 21

    expression                     shift and go to state 48

state 31

    (23) expression -> expression DIVIDE . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . MINUS expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . NAME

    MINUS           shift and go to state 6
    LPAREN          shift and go to state 11
    NUMBER          shift and go to state 3
    NAME            shift and go to state 21

    expression                     shift and go to state 49

state 32

    (21) expression -> expression MINUS . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . MINUS expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . NAME

    MINUS           shift and go to state 6
    LPAREN          shift and go to state 11
    NUMBER          shift and go to state 3
    NAME            shift and go to state 21

    expression                     shift and go to state 50

state 33

    (22) expression -> expression TIMES . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . MINUS expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NUMBER
    (27) expression -> . NAME

    MINUS           shift and go to state 6
    LPAREN          shift and go to state 11
    NUMBER          shift and go to state 3
    NAME            shift and go to state 21

    expression                     shift and go to state 51

state 34

    (12) statement -> DUMP LPAREN RPAREN .

    SEMICOLON       reduce using rule 12 (statement -> DUMP LPAREN RPAREN .)
    $end            reduce using rule 12 (statement -> DUMP LPAREN RPAREN .)


state 35

    (13) statement -> DUMP LPAREN expression . RPAREN
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 52
    PLUS            shift and go to state 30
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 31


state 36

    (10) statement -> READ LPAREN expression . COMMA expression RPAREN
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression

    COMMA           shift and go to state 53
    PLUS            shift and go to state 30
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 31


state 37

    (6) statement -> BEGIN_READONLY LPAREN namelist . RPAREN

    RPAREN          shift and go to state 54


state 38

    (16) namelist -> NAME .
    (17) namelist -> NAME . COMMA namelist

    RPAREN          reduce using rule 16 (namelist -> NAME .)
    COMMA           shift and go to state 55


state 39

    (5) statement -> BEGIN LPAREN namelist . RPAREN

    RPAREN          shift and go to state 56


state 40

    (3) stmtlist -> statement SEMICOLON stmtlist .

    $end            reduce using rule 3 (stmtlist -> statement SEMICOLON stmtlist .)


state 41

    (18) exprlist -> expression .
    (19) exprlist -> expression . COMMA exprlist
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression

    RPAREN          reduce using rule 18 (exprlist -> expression .)
    COMMA           shift and go to state 57
    PLUS            shift and go to state 30
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 31


state 42

    (7) statement -> END LPAREN exprlist . RPAREN

    RPAREN          shift and go to state 58


state 43

    (11) statement -> WRITE LPAREN expression . COMMA expression COMMA expression RPAREN
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression

    COMMA           shift and go to state 59
    PLUS            shift and go to state 30
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 31


state 44

    (25) expression -> LPAREN expression RPAREN .

    PLUS            reduce using rule 25 (expression -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 25 (expression -> LPAREN expression RPAREN .)
    TIMES           reduce using rule 25 (expression -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 25 (expression -> LPAREN expression RPAREN .)
    SEMICOLON       reduce using rule 25 (expression -> LPAREN expression RPAREN .)
    $end            reduce using rule 25 (expression -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 25 (expression -> LPAREN expression RPAREN .)
    COMMA           reduce using rule 25 (expression -> LPAREN expression RPAREN .)


state 45

    (8) statement -> FAIL LPAREN exprlist . RPAREN

    RPAREN          shift and go to state 60


state 46

    (14) statement -> NAME EQUALS expression .
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression

    SEMICOLON       reduce using rule 14 (statement -> NAME EQUALS expression .)
    $end            reduce using rule 14 (statement -> NAME EQUALS expression .)
    PLUS            shift and go to state 30
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 31


state 47

    (9) statement -> RECOVER LPAREN exprlist . RPAREN

    RPAREN          shift and go to state 61


state 48

    (20) expression -> expression PLUS expression .
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression

    PLUS            reduce using rule 20 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 20 (expression -> expression PLUS expression .)
    SEMICOLON       reduce using rule 20 (expression -> expression PLUS expression .)
    $end            reduce using rule 20 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 20 (expression -> expression PLUS expression .)
    COMMA           reduce using rule 20 (expression -> expression PLUS expression .)
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 31

  ! TIMES           [ reduce using rule 20 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 20 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 30 ]
  ! MINUS           [ shift and go to state 32 ]


state 49

    (23) expression -> expression DIVIDE expression .
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression

    PLUS            reduce using rule 23 (expression -> expression DIVIDE expression .)
    MINUS           reduce using rule 23 (expression -> expression DIVIDE expression .)
    TIMES           reduce using rule 23 (expression -> expression DIVIDE expression .)
    DIVIDE          reduce using rule 23 (expression -> expression DIVIDE expression .)
    SEMICOLON       reduce using rule 23 (expression -> expression DIVIDE expression .)
    $end            reduce using rule 23 (expression -> expression DIVIDE expression .)
    RPAREN          reduce using rule 23 (expression -> expression DIVIDE expression .)
    COMMA           reduce using rule 23 (expression -> expression DIVIDE expression .)

  ! PLUS            [ shift and go to state 30 ]
  ! MINUS           [ shift and go to state 32 ]
  ! TIMES           [ shift and go to state 33 ]
  ! DIVIDE          [ shift and go to state 31 ]


state 50
